objects/IdMatrix_Search_Result__c.object
<CustomObject>
    <fields>
        <fullName>Current_Address_Match_Score_Weight__c</fullName>
        <label>Current Address Match Score Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Match_Score__c</fullName>
        <label>Current Address Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Name_Match_Indicator__c</fullName>
        <label>Family Name Match Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Name_Match_Score_Weight__c</fullName>
        <label>Family Name Match Score Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Name_Match_Score__c</fullName>
        <label>Family Name Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Name_Search_Value__c</fullName>
        <label>Family Name Search Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Match_Indicator__c</fullName>
        <label>First Name Match Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Match_Score_Weight__c</fullName>
        <label>First Name Match Score Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Match_Score__c</fullName>
        <label>First Name Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name_Search_Value__c</fullName>
        <label>First Name Search Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Match_Score_Weight__c</fullName>
        <label>Individual Match Score Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Match_Score__c</fullName>
        <label>Individual Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Indicator__c</fullName>
        <label>Match Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Score__c</fullName>
        <label>Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Name_Match_Indicator__c</fullName>
        <label>Other Name Match Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Name_Match_Score_Weight__c</fullName>
        <label>Other Name Match Score Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Name_Match_Score__c</fullName>
        <label>Other Name Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Name_Search_Value__c</fullName>
        <label>Other Name Search Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code_Match_Indicator__c</fullName>
        <label>Post Code Match Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code_Match_Score_Weight__c</fullName>
        <label>Post Code Match Score Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code_Match_Score__c</fullName>
        <label>Post Code Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code_Search_Value__c</fullName>
        <label>Post Code Search Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Name__c</fullName>
        <label>Search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Type__c</fullName>
        <label>Search Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Result_Code__c</fullName>
        <label>Service Result Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Result_Detail__c</fullName>
        <label>Service Result Detail</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Result_String__c</fullName>
        <label>Service Result String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Match_Indicator__c</fullName>
        <label>State Match Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Match_Score_Weight__c</fullName>
        <label>State Match Score Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Match_Score__c</fullName>
        <label>State Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Search_Value__c</fullName>
        <label>State Search Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name_Match_Indicator__c</fullName>
        <label>Street Name Match Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name_Match_Score_Weight__c</fullName>
        <label>Street Name Match Score Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name_Match_Score__c</fullName>
        <label>Street Name Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name_Search_Value__c</fullName>
        <label>Street Name Search Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number_Match_Indicator__c</fullName>
        <label>Street Number Match Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number_Match_Score_Weight__c</fullName>
        <label>Street Number Match Score Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number_Match_Score__c</fullName>
        <label>Street Number Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Number_Search_Value__c</fullName>
        <label>Street Number Search Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Type_Search_Value__c</fullName>
        <label>Street Type Search Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb_Match_Indicator__c</fullName>
        <label>Suburb Match Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb_Match_Score_Weight__c</fullName>
        <label>Suburb Match Score Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb_Match_Score__c</fullName>
        <label>Suburb  Match Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb_Search_Value__c</fullName>
        <label>Suburb Search Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veda_IdMatrix__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda IdMatrix</label>
        <referenceTo>Veda_IdMatrix__c</referenceTo>
        <relationshipLabel>IdMatrix Search Results</relationshipLabel>
        <relationshipName>IdMatrix_Search_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>IdMatrix Search Result</label>
    <nameField>
        <label>Search Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Search Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>